test_regress/t/t_prop_always_unbounded_unsup.out
%Error-UNSUPPORTED: t/t_prop_always_unbounded_unsup.v:11:30: Unsupported: Unbounded ('$') outside of queue or string operations
                                                           : ... note: In instance 't'
   11 |     @(posedge clk) always [2:$] a;
      |                              ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_prop_always_unbounded_unsup.v:11:20: Unsupported: unbounded always range (always [m:$])
                                                           : ... note: In instance 't'
   11 |     @(posedge clk) always [2:$] a;
      |                    ^~~~~~
%Error: Exiting due to
